# vegito

./: .gitignore  CMakeLists.txt  README.md  run.sh
cmake/: FindTBB.cmake
configs/: drtmh.xml  freshness.xml  gindex.xml  hello-world.xml  motiv-log-ft.xml  motiv-log-gts.xml  motiv-log-para.xml  motiv-log-unlimit.xml  read-scan-block.xml  read-scan-chain.xml  read-scan-rs.xml  read-scan-vegito.xml  vegito-all-oltp.xml  vegito-htap.xml
configs/gindex/: gindex.xml
configs/htap/: drtmh-tp.xml  hello-world.xml  motiv-log-para.xml  motiv-log-unlimit.xml  read-scan-chain.xml  read-scan-vegito.xml  vegito-all-olap.xml  vegito-all-oltp.xml
configs/htgap/: dual-gart-ap-ldbc.xml  dual-gart-ap-tpcc.xml  dual-live-ap-ldbc.xml  dual-live-ap-tpcc.xml  dynamic-flex-prop.xml  gart-ap-ldbc.xml  gart-ap-tpcc.xml  gart-tp.xml  graph-dual.xml  graph.xml  ldbc.xml  livegraph-ap-ldbc.xml  livegraph-ap-tpcc.xml
configs/lagecy/: 0.xml  1.xml  10.xml  11.xml  12.xml  13.xml  14.xml  15.xml  16.xml  17.xml  18.xml  19.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml  8.xml  9-global-ts.xml  9-oltp.xml  9.xml  drtm_0_back.xml  drtm_1_back.xml  drtm_2_back.xml
configs/micro/: ch-lg-ran.xml  ch-lg-seq.xml  ldbc-lg-ran.xml  ldbc-lg-seq.xml  rmat-csr-ran.xml  rmat-csr-seq.xml  rmat-lg-ran.xml  rmat-lg-seq.xml  rmat-seg-ran.xml  rmat-seg-seq.xml  tw-csr-ran.xml  tw-csr-seq.xml  tw-lg-ran.xml  tw-lg-seq.xml  tw-seg-ran.xml  tw-seg-seq.xml  uk-csr-ran.xml  uk-csr-seq.xml  uk-lg-ran.xml  uk-lg-seq.xml  uk-seg-ran.xml  uk-seg-seq.xml  wiki-csr-ran.xml  wiki-csr-seq.xml  wiki-lg-ran.xml  wiki-lg-seq.xml  wiki-seg-ran.xml  wiki-seg-seq.xml
docs/: get-started.md  micro.md
scripts/: copyright.sh  copyright.txt  count-lines.sh  count_line.sh  eval-oltp.sh  fresh-eval.py  run-fresh.py  run.py  run.sh  run2.py  run_index_test.py  run_test3.py  sync_to_server.sh
src/: all.h  arch.h  config.h  custom_config.h
src/app/analytics/: bfs.hpp  cc.hpp  gcn.hpp  graphsage.hpp  pagerank.hpp  pagerank_breakdown.hpp  sgc.hpp  sgc_breakdown.hpp  sssp.hpp
src/app/ch/: ch_analytics.cc  ch_analytics.h  ch_config.cc  ch_config.h  ch_graph.cc  ch_loader.cc  ch_loader.h  ch_log_cleaner.cc  ch_log_cleaner.h  ch_main.cc  ch_main.h  ch_mixin.h  ch_query.cc  ch_query.h  ch_runner.cc  ch_runner.h  ch_schema.h  ch_worker.cc  ch_worker.h
src/app/ldbc/: ldbc_analytics.cc  ldbc_analytics.h  ldbc_config.cc  ldbc_config.h  ldbc_graph_loader.cc  ldbc_graph_loader.h  ldbc_log_cleaner.cc  ldbc_log_cleaner.h  ldbc_main.cc  ldbc_main.h  ldbc_query.cc  ldbc_query.h  ldbc_runner.cc  ldbc_runner.h  ldbc_schema.h  ldbc_worker.cc  ldbc_worker.h
src/app/micro_index/: mindex_config.cc  mindex_config.h  mindex_main.cc  mindex_main.h
src/app/wiki/: bench_listener.cc  bench_listener.h  epoch_timer.cc  epoch_timer.h  wiki_analytics.cc  wiki_analytics.h  wiki_config.cc  wiki_config.h  wiki_loader.cc  wiki_loader.h  wiki_main.cc  wiki_main.h  wiki_query.cc  wiki_query.h  wiki_runner.cc  wiki_runner.h  wiki_scan.cc  wiki_scan.h  wiki_update.cc  wiki_update.h
src/backup_store/: backup_db.cc  backup_db.h  backup_index.h  backup_index_hash.cc  backup_index_hash.h  backup_store.h  backup_store_col.cc  backup_store_col.h  backup_store_col2.cc  backup_store_col2.h  backup_store_flex.cc  backup_store_flex.h  backup_store_kv.cc  backup_store_kv.h  backup_store_row.cc  backup_store_row.h  backup_tree.h  backup_vprop.h  kv_template.h
src/db/: db_logger.cc  db_logger.h  db_one_remote.cc  db_one_remote.h  db_statistics_helper.h  forkset.cc  forkset.h  remote_set.cc  remote_set.h  remote_set_structs.h  req_buf_allocator.h
src/db/txs/: db_farm.cc  db_farm.h  db_farm_rpc.cc  dbrad.cc  dbrad.h  dbrad_rpc_handler.cc  dbsi.cc  dbsi.h  dbsi_rpc_handler.cc  dbtx.cc  dbtx.h  dbtx_remote.cc  dbtx_rpc_handler.cc  log_ts_manager.cc  log_ts_manager.h  si_ts_manager.cc  si_ts_manager.h  tx_handler.h
src/framework/: backup_worker.cc  backup_worker.h  bench_analytics.cc  bench_analytics.h  bench_listener.cc  bench_listener.h  bench_loader.cc  bench_loader.h  bench_query.cc  bench_query.h  bench_reporter.cc  bench_reporter.h  bench_runner.cc  bench_runner.h  bench_worker.cc  bench_worker.h  framework.cc  framework.h  framework_cfg.cc  framework_cfg.h  log_area.cc  log_area.h  log_cleaner.cc  log_cleaner.h  log_listener.cc  log_listener.h  main.cc  rdma_config.cc  rdma_config.h  rdma_sched.cc  rdma_sched.h  routine.cc  routine.h  rpc.cc  rpc.h  rworker.cc  rworker.h  view_manager.cc  view_manager.h
src/framework/utils/: inline_str.h  macros.h  thread.cc  thread.h  varint.cc
src/grape/: config.h  grape.h  types.h  util.h
src/grape/app/: auto_app_base.h  batch_shuffle_app_base.h  context_base.h  parallel_app_base.h  vertex_data_context.h  void_context.h
src/grape/communication/: communicator.h  shuffle.h  sync_comm.h
src/grape/fragment/: basic_fragment_loader.h  e_fragment_loader.h  edgecut_fragment_base.h  ev_fragment_loader.h  fragment_base.h  immutable_edgecut_fragment.h  livegraph_wrapper.h  loader.h  partitioner.h  rebalancer.h  seggraph_wrapper.h
src/grape/graph/: adj_list.h  edge.h  vertex.h
src/grape/io/: io_adaptor_base.h  line_parser_base.h  local_io_adaptor.cc  local_io_adaptor.h  tsv_line_parser.h
src/grape/parallel/: auto_parallel_message_manager.h  batch_shuffle_message_manager.h  default_message_manager.h  message_in_buffer.h  parallel_engine.h  (+5 more)
src/graph/: ddl.cc  ddl.h  graph_store.cc  graph_store.h  replayer.cc  replayer.h
src/gremlin-queries/: gaia.md
src/interactive_engine/executor/runtime/native/: CMakeLists.txt  global_store_ffi.cc  global_store_ffi.h  graph_builder_ffi.cc  graph_builder_ffi.h
src/livegraph/: README-LinkBench.md  README.md
src/memstore/: memdb.cc  memdb.h  memstore.h  memstore_bplustree.cc  memstore_bplustree.h  memstore_hash.cc  memstore_hash.h  memstore_tree.cc  memstore_tree.h  memstore_uint64bplustree.cc  memstore_uint64bplustree.h  rdma_hashext.h
src/structure/: queue.h  vector.h
src/util/: barrier.h  fast_random.h  mapped_log.cc  mapped_log.h  rtm.h  spinlock.h  temp_log.h  timer.h  util.cc  util.h
(+176 files in other folders)
